Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -469,12 +469,13 @@
                                     <li><a href="http://gik.me/tag/htc.html" class="link">htc</a> (7)</li>
                                     <li><a href="http://gik.me/tag/html5.html" class="link">html5</a> (1)</li>
                                     <li><a href="http://gik.me/tag/https.html" class="link">https</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/huawei.html" class="link">huawei</a> (7)</li>
+                                    <li><a href="http://gik.me/tag/huawei.html" class="link">huawei</a> (8)</li>
                                     <li><a href="http://gik.me/tag/hulu.html" class="link">hulu</a> (1)</li>
                                     <li><a href="http://gik.me/tag/humanity.html" class="link">humanity</a> (1)</li>
                                     <li><a href="http://gik.me/tag/hydrogen.html" class="link">hydrogen</a> (1)</li>
                                     <li><a href="http://gik.me/tag/hyperloop.html" class="link">hyperloop</a> (2)</li>
                                     <li><a href="http://gik.me/tag/hyundai.html" class="link">hyundai</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/ibc.html" class="link">ibc</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ibeacon.html" class="link">ibeacon</a> (1)</li>
                                     <li><a href="http://gik.me/tag/iblazr.html" class="link">iblazr</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ibm.html" class="link">ibm</a> (11)</li>
@@ -620,6 +621,7 @@
                                     <li><a href="http://gik.me/tag/mastercard.html" class="link">mastercard</a> (2)</li>
                                     <li><a href="http://gik.me/tag/mastering.html" class="link">mastering</a> (1)</li>
                                     <li><a href="http://gik.me/tag/masturbation.html" class="link">masturbation</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/matebook.html" class="link">matebook</a> (1)</li>
                                     <li><a href="http://gik.me/tag/material.html" class="link">material</a> (1)</li>
                                     <li><a href="http://gik.me/tag/material-design.html" class="link">material design</a> (1)</li>
                                     <li><a href="http://gik.me/tag/math.html" class="link">math</a> (1)</li>
@@ -799,6 +801,7 @@
                                     <li><a href="http://gik.me/tag/power-sleep.html" class="link">power sleep</a> (1)</li>
                                     <li><a href="http://gik.me/tag/powerpoint.html" class="link">powerpoint</a> (1)</li>
                                     <li><a href="http://gik.me/tag/print.html" class="link">print</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/prisma.html" class="link">prisma</a> (1)</li>
                                     <li><a href="http://gik.me/tag/project-ara.html" class="link">project ara</a> (1)</li>
                                     <li><a href="http://gik.me/tag/proofy.html" class="link">proofy</a> (1)</li>
                                     <li><a href="http://gik.me/tag/prosthesis.html" class="link">prosthesis</a> (1)</li>
@@ -876,7 +879,7 @@
                                     <li><a href="http://gik.me/tag/satellite.html" class="link">satellite</a> (1)</li>
                                     <li><a href="http://gik.me/tag/satoru-iwata.html" class="link">satoru iwata</a> (1)</li>
                                     <li><a href="http://gik.me/tag/satya-nadella.html" class="link">satya nadella</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/sberbank.html" class="link">sberbank</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/sberbank.html" class="link">sberbank</a> (3)</li>
                                     <li><a href="http://gik.me/tag/science.html" class="link">science</a> (5)</li>
                                     <li><a href="http://gik.me/tag/scrolls.html" class="link">scrolls</a> (2)</li>
                                     <li><a href="http://gik.me/tag/seagate.html" class="link">seagate</a> (1)</li>
@@ -1067,6 +1070,7 @@
                                     <li><a href="http://gik.me/tag/vc.html" class="link">vc</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vhs.html" class="link">vhs</a> (1)</li>
                                     <li><a href="http://gik.me/tag/video.html" class="link">video</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/vinci.html" class="link">vinci</a> (1)</li>
                                     <li><a href="http://gik.me/tag/virt2real.html" class="link">virt2real</a> (1)</li>
                                     <li><a href="http://gik.me/tag/virtuspro.html" class="link">virtus.pro</a> (1)</li>
                                     <li><a href="http://gik.me/tag/visa.html" class="link">visa</a> (2)</li>
@@ -1127,7 +1131,7 @@
                                     <li><a href="http://gik.me/tag/xbox-one.html" class="link">xbox one</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xeon.html" class="link">xeon</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xi3.html" class="link">xi3</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/xiaomi.html" class="link">xiaomi</a> (13)</li>
+                                    <li><a href="http://gik.me/tag/xiaomi.html" class="link">xiaomi</a> (14)</li>
                                     <li><a href="http://gik.me/tag/xmpp.html" class="link">xmpp</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xorg.html" class="link">x.org</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xperia.html" class="link">xperia</a> (2)</li>
