Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -101,7 +101,7 @@
                                     <li><a href="http://gik.me/tag/appstore.html" class="link">appstore</a> (2)</li>
                                     <li><a href="http://gik.me/tag/ar.html" class="link">ar</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ara.html" class="link">ara</a> (5)</li>
-                                    <li><a href="http://gik.me/tag/arm.html" class="link">arm</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/arm.html" class="link">arm</a> (5)</li>
                                     <li><a href="http://gik.me/tag/army.html" class="link">army</a> (1)</li>
                                     <li><a href="http://gik.me/tag/arnold-schwarzenegger.html" class="link">arnold schwarzenegger</a> (1)</li>
                                     <li><a href="http://gik.me/tag/arrow.html" class="link">arrow</a> (1)</li>
@@ -177,6 +177,7 @@
                                     <li><a href="http://gik.me/tag/bolt.html" class="link">bolt</a> (1)</li>
                                     <li><a href="http://gik.me/tag/bootstrap.html" class="link">bootstrap</a> (2)</li>
                                     <li><a href="http://gik.me/tag/boston-dynamics.html" class="link">boston dynamics</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/bot.html" class="link">bot</a> (1)</li>
                                     <li><a href="http://gik.me/tag/box2box.html" class="link">box2box</a> (1)</li>
                                     <li><a href="http://gik.me/tag/bq.html" class="link">bq</a> (2)</li>
                                     <li><a href="http://gik.me/tag/brain.html" class="link">brain</a> (1)</li>
@@ -213,7 +214,7 @@
                                     <li><a href="http://gik.me/tag/charge.html" class="link">charge</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chasy.html" class="link">часы</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chat.html" class="link">chat</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (13)</li>
+                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (14)</li>
                                     <li><a href="http://gik.me/tag/chrome.html" class="link">chrome</a> (9)</li>
                                     <li><a href="http://gik.me/tag/chrome-os.html" class="link">chrome os</a> (4)</li>
                                     <li><a href="http://gik.me/tag/chromebook.html" class="link">chromebook</a> (2)</li>
@@ -503,7 +504,7 @@
                                     <li><a href="http://gik.me/tag/injustice.html" class="link">injustice</a> (1)</li>
                                     <li><a href="http://gik.me/tag/innovations.html" class="link">innovations</a> (1)</li>
                                     <li><a href="http://gik.me/tag/instagram.html" class="link">instagram</a> (6)</li>
-                                    <li><a href="http://gik.me/tag/intel.html" class="link">intel</a> (15)</li>
+                                    <li><a href="http://gik.me/tag/intel.html" class="link">intel</a> (16)</li>
                                     <li><a href="http://gik.me/tag/interet.html" class="link">interet</a> (1)</li>
                                     <li><a href="http://gik.me/tag/internet.html" class="link">internet</a> (4)</li>
                                     <li><a href="http://gik.me/tag/interview.html" class="link">interview</a> (1)</li>
@@ -1042,7 +1043,7 @@
                                     <li><a href="http://gik.me/tag/twitter.html" class="link">twitter</a> (9)</li>
                                     <li><a href="http://gik.me/tag/type-c.html" class="link">type-c</a> (1)</li>
                                     <li><a href="http://gik.me/tag/uaz.html" class="link">uaz</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/uber.html" class="link">uber</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/uber.html" class="link">uber</a> (3)</li>
                                     <li><a href="http://gik.me/tag/ubisoft.html" class="link">ubisoft</a> (5)</li>
                                     <li><a href="http://gik.me/tag/ubuntu.html" class="link">ubuntu</a> (25)</li>
                                     <li><a href="http://gik.me/tag/ubuntu-phone.html" class="link">ubuntu phone</a> (1)</li>
