--- a/tags.html
+++ b/tags.html
@@ -95,7 +95,7 @@
                                     <li><a href="http://gik.me/tag/anticollector.html" class="link">anticollector</a> (1)</li>
                                     <li><a href="http://gik.me/tag/apache.html" class="link">apache</a> (1)</li>
                                     <li><a href="http://gik.me/tag/api.html" class="link">api</a> (5)</li>
-                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (78)</li>
+                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (79)</li>
                                     <li><a href="http://gik.me/tag/apple-pay.html" class="link">apple pay</a> (1)</li>
                                     <li><a href="http://gik.me/tag/appnet.html" class="link">app.net</a> (3)</li>
                                     <li><a href="http://gik.me/tag/appstore.html" class="link">appstore</a> (2)</li>
@@ -134,6 +134,7 @@
                                     <li><a href="http://gik.me/tag/badcode.html" class="link">badcode</a> (1)</li>
                                     <li><a href="http://gik.me/tag/badman.html" class="link">badman</a> (1)</li>
                                     <li><a href="http://gik.me/tag/baikal.html" class="link">baikal</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/bank-of-america.html" class="link">bank of america</a> (1)</li>
                                     <li><a href="http://gik.me/tag/barbie.html" class="link">barbie</a> (1)</li>
                                     <li><a href="http://gik.me/tag/basecamp.html" class="link">basecamp</a> (1)</li>
                                     <li><a href="http://gik.me/tag/bash.html" class="link">bash</a> (1)</li>
@@ -786,7 +787,7 @@
                                     <li><a href="http://gik.me/tag/pizza-dodo.html" class="link">pizza dodo</a> (1)</li>
                                     <li><a href="http://gik.me/tag/planetside.html" class="link">planetside</a> (1)</li>
                                     <li><a href="http://gik.me/tag/play-station.html" class="link">play station</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/playstation.html" class="link">playstation</a> (19)</li>
+                                    <li><a href="http://gik.me/tag/playstation.html" class="link">playstation</a> (20)</li>
                                     <li><a href="http://gik.me/tag/pnacl.html" class="link">pnacl</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pochta-rossii.html" class="link">почта россии</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pocket.html" class="link">pocket</a> (1)</li>
@@ -937,7 +938,7 @@
                                     <li><a href="http://gik.me/tag/softline.html" class="link">softline</a> (1)</li>
                                     <li><a href="http://gik.me/tag/solar-page.html" class="link">solar page</a> (1)</li>
                                     <li><a href="http://gik.me/tag/solid-energy.html" class="link">solid energy</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/sony.html" class="link">sony</a> (16)</li>
+                                    <li><a href="http://gik.me/tag/sony.html" class="link">sony</a> (17)</li>
                                     <li><a href="http://gik.me/tag/sound.html" class="link">sound</a> (1)</li>
                                     <li><a href="http://gik.me/tag/soundcloud.html" class="link">soundcloud</a> (1)</li>
                                     <li><a href="http://gik.me/tag/source.html" class="link">source</a> (1)</li>
