Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -62,6 +62,7 @@
                                     <li><a href="http://gik.me/tag/acdc.html" class="link">ac/dc</a> (1)</li>
                                     <li><a href="http://gik.me/tag/acer.html" class="link">acer</a> (1)</li>
                                     <li><a href="http://gik.me/tag/activision.html" class="link">activision</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/adblock.html" class="link">adblock</a> (1)</li>
                                     <li><a href="http://gik.me/tag/addystone.html" class="link">addystone</a> (1)</li>
                                     <li><a href="http://gik.me/tag/adidas.html" class="link">adidas</a> (1)</li>
                                     <li><a href="http://gik.me/tag/adnroid.html" class="link">adnroid</a> (1)</li>
@@ -95,7 +96,7 @@
                                     <li><a href="http://gik.me/tag/anticollector.html" class="link">anticollector</a> (1)</li>
                                     <li><a href="http://gik.me/tag/apache.html" class="link">apache</a> (1)</li>
                                     <li><a href="http://gik.me/tag/api.html" class="link">api</a> (5)</li>
-                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (79)</li>
+                                    <li><a href="http://gik.me/tag/apple.html" class="link">apple</a> (80)</li>
                                     <li><a href="http://gik.me/tag/apple-pay.html" class="link">apple pay</a> (1)</li>
                                     <li><a href="http://gik.me/tag/appnet.html" class="link">app.net</a> (3)</li>
                                     <li><a href="http://gik.me/tag/appstore.html" class="link">appstore</a> (2)</li>
@@ -215,7 +216,7 @@
                                     <li><a href="http://gik.me/tag/charge.html" class="link">charge</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chasy.html" class="link">часы</a> (1)</li>
                                     <li><a href="http://gik.me/tag/chat.html" class="link">chat</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (14)</li>
+                                    <li><a href="http://gik.me/tag/china.html" class="link">china</a> (15)</li>
                                     <li><a href="http://gik.me/tag/chrome.html" class="link">chrome</a> (9)</li>
                                     <li><a href="http://gik.me/tag/chrome-os.html" class="link">chrome os</a> (4)</li>
                                     <li><a href="http://gik.me/tag/chromebook.html" class="link">chromebook</a> (2)</li>
@@ -235,7 +236,7 @@
                                     <li><a href="http://gik.me/tag/con-man.html" class="link">con man</a> (1)</li>
                                     <li><a href="http://gik.me/tag/control.html" class="link">control</a> (1)</li>
                                     <li><a href="http://gik.me/tag/controller.html" class="link">controller</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/copyright.html" class="link">copyright</a> (3)</li>
+                                    <li><a href="http://gik.me/tag/copyright.html" class="link">copyright</a> (4)</li>
                                     <li><a href="http://gik.me/tag/coratna.html" class="link">coratna</a> (1)</li>
                                     <li><a href="http://gik.me/tag/coreos.html" class="link">coreos</a> (1)</li>
                                     <li><a href="http://gik.me/tag/cortana.html" class="link">cortana</a> (2)</li>
@@ -570,6 +571,7 @@
                                     <li><a href="http://gik.me/tag/lazer.html" class="link">lazer</a> (1)</li>
                                     <li><a href="http://gik.me/tag/leatherman.html" class="link">leatherman</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lebedev.html" class="link">lebedev</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/leeco.html" class="link">leeco</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lefutur.html" class="link">lefutur</a> (1)</li>
                                     <li><a href="http://gik.me/tag/lego.html" class="link">lego</a> (2)</li>
                                     <li><a href="http://gik.me/tag/lenovo.html" class="link">lenovo</a> (14)</li>
@@ -800,7 +802,7 @@
                                     <li><a href="http://gik.me/tag/police.html" class="link">police</a> (1)</li>
                                     <li><a href="http://gik.me/tag/politics.html" class="link">politics</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pony-express.html" class="link">pony express</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/pornhub.html" class="link">pornhub</a> (8)</li>
+                                    <li><a href="http://gik.me/tag/pornhub.html" class="link">pornhub</a> (9)</li>
                                     <li><a href="http://gik.me/tag/poser.html" class="link">poser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/postgresql.html" class="link">postgresql</a> (1)</li>
                                     <li><a href="http://gik.me/tag/power.html" class="link">power</a> (1)</li>
@@ -1075,6 +1077,7 @@
                                     <li><a href="http://gik.me/tag/vacuum.html" class="link">vacuum</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vaio.html" class="link">vaio</a> (1)</li>
                                     <li><a href="http://gik.me/tag/valve.html" class="link">valve</a> (18)</li>
+                                    <li><a href="http://gik.me/tag/varlamov.html" class="link">varlamov</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vc.html" class="link">vc</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vhs.html" class="link">vhs</a> (1)</li>
                                     <li><a href="http://gik.me/tag/video.html" class="link">video</a> (1)</li>
