Generate Pelican site

--- a/pages/how-to-record.html
+++ b/pages/how-to-record.html
@@ -63,7 +63,7 @@
 </ul>
 <p><a name="audacity-records"></a></p>
 <h3>Запись голоса через Audacity (бесплатно, все&nbsp;ОС)</h3>
-<p>Прогамма <a href="http://audacity.sourceforge.net/?lang=ru">Audacity</a> доступна бесплатно под все популярные десктопные ОС. Имеет слегка неказистый интерфейс, что не умаляет её достоинств. Ей вполне можно как производить запись, так и убирать шумы, накладывать эффекты, нарезать рингтоны и делать прочие&nbsp;подкасты.</p>
+<p>Программа <a href="http://audacity.sourceforge.net/?lang=ru">Audacity</a> доступна бесплатно под все популярные десктопные ОС. Имеет слегка неказистый интерфейс, что не умаляет её достоинств. Ей вполне можно как производить запись, так и убирать шумы, накладывать эффекты, нарезать рингтоны и делать прочие&nbsp;подкасты.</p>
 <p>Естественно сначала нужно <a href="http://audacity.sourceforge.net/download/">скачать/установить саму Audacity</a>.</p>
 <p>Далее нужно протестировать запись. На разных системах с разными микрофонами настройки будут разным, так что серебряной пули тут нет. Главное чтобы звук не зашкаливал и не был слишком тихим, остальной мы постараемся&nbsp;вытянуть.</p>
 <p>Общие для всех шаги (не обращайте внимание на скриншоты, у вас будут другие устройства и их&nbsp;количество):</p>
