Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -99,7 +99,7 @@
 41001~1828<br />
 41001~8384 х3<br />&nbsp;410011~5160  </p>
 <p>Cyber (@cyber)<br />
-Khojanashvili Givi<br />
+Khojanashvili Givi (@gigovich)<br />
 Kolganov Evgeny<br />
 Konstantin Taletskiy<br />
 Rad (@greynix) х3<br />
@@ -109,7 +109,8 @@ Robert Null (@bobrebyc)&nbsp;х2  </p>
 Савин&nbsp;Михаил  </p>
 <h3>Автоплатёж:</h3>
 <p>Денис (@denis_0k)<br />
-Cyber&nbsp;(@cyber)</p>
+Cyber (@cyber)<br />
+Khojanashvili Givi&nbsp;(@gigovich)</p>
                 </section>
                 <footer class="article__footer">
                     <div class="article__meta">
