Generate Pelican site

--- a/pages/how-to-record.html
+++ b/pages/how-to-record.html
@@ -70,7 +70,8 @@
 <p><img alt="Важные части Audacity" src="http://2.bp.blogspot.com/-w-JSo-vidhM/UuKhSKyVxDI/AAAAAAAAMx8/L8PeCnOBr2Q/s1600/Audacity_008.png" /></p>
 <p>Запустить Audacity&nbsp;:)</p>
 <p>Выбрать устройство для записи и режим — выделение 3 на рисунке выше. Желательно стерео, если стерео не пишет — ничего страшного пусть будет&nbsp;моно.</p>
-<p>Нажать запись и проверить её качество — выделения 1 и 2 на рисунке. По индикатору в первом выделении можно видеть не зашкаливает ли уровень сигнала в данный момент. Если зашкаливает — это плохо. Нужно уменьшать громкость/усиление микрофона (в разных системах делается по-разному). Для&nbsp;Ubuntu:</p>
+<p>Нажать запись и проверить её качество — выделения 1 и 2 на рисунке. По индикатору в первом выделении можно видеть не зашкаливает ли уровень сигнала в данный момент. Если зашкаливает — это плохо. Нужно уменьшать громкость/усиление микрофона (в разных системах делается&nbsp;по-разному). </p>
+<h3>Для&nbsp;Ubuntu:</h3>
 <p><img alt="Audacity" src="http://3.bp.blogspot.com/-MPeDSQfzask/UuKjI7doo4I/AAAAAAAAMyE/BnBBnf7LJMs/s1600/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B5%D0%B5+%D0%BC%D0%B5%D1%81%D1%82%D0%BE+1_016.png" /><br />
 <img alt="Audacity" src="http://2.bp.blogspot.com/-i90TCJeJEzE/UuKjVwJM1jI/AAAAAAAAMyM/GC_Fufs1QJo/s1600/%D0%97%D0%B2%D1%83%D0%BA_017.png" /></p>
 <p>По графику во втором выделении можно оценить качество всей записи. Желательно чтобы когда вы говорите обычным голосом он пики выглядели не меньше чем на скриншоте. Будет больше — лучше, лишь бы не« упирался» сверху и снизу. Если «упирается» значит зашкаливает и нужно уменьшать громкость/усиление микрофона (см чуть выше). Если будет меньше - попробуйте усилить микрофон. Если при этом запись начинает фонить/трещать и вообще всё плохо — уберите усиление. Лучше пусть будет тише, чем&nbsp;трещит.</p>
